Made a main js file and made the flowchart as a class (function in javascript ofcourse)

--- a/FlowChart/index.html
+++ b/FlowChart/index.html
@@ -2,7 +2,8 @@
 <head>
 <script type="text/javascript"
 	src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<script type="text/javascript" src="flowchart.js"></script>
+	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="flowchart.js"></script>
 <style type="text/css">
 #canvas_container {
 	width: 800px;
